crates/tankan/tests/snapshots/corpus_test__svg_07-notes.snap
---
source: crates/tankan/tests/corpus_test.rs
expression: svg
---
<svg class="tankan tankan-sequence" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 455.5 340" width="455.5" height="340" role="img" aria-label="Sequence diagram" font-family="sans-serif" font-size="14">
<style>
.tankan text { fill: #1f2328; }
.tankan .tk-actor rect { fill: #ffffff; stroke: #d1d9e0; }
.tankan .tk-actor-figure { stroke: #1f2328; fill: none; }
.tankan .tk-lifeline { stroke: #59636e; }
.tankan .tk-msg { stroke: #1f2328; fill: none; }
.tankan .tk-head-fill { fill: #1f2328; }
.tankan .tk-head-line { stroke: #1f2328; fill: none; stroke-width: 1.5; }
.tankan .tk-activation { fill: #f6f8fa; stroke: #d1d9e0; }
.tankan .tk-note { fill: #f6f8fa; stroke: #d1d9e0; }
.tankan .tk-frame { stroke: #d1d9e0; fill: none; }
.tankan .tk-frame-sep { stroke: #d1d9e0; stroke-dasharray: 4,4; }
.tankan .tk-frame-labelbox { fill: #f6f8fa; stroke: #d1d9e0; }
.tankan .tk-frame-kind { font-weight: bold; }
.tankan .tk-frame-label { fill: #59636e; }
.tankan .tk-groupbox { stroke: #d1d9e0; fill: none; }
.tankan .tk-groupbox-bg { stroke: none; }
.tankan .tk-seqnum circle { fill: #9a6700; }
.tankan .tk-seqnum text { fill: #ffffff; font-size: 11px; }
.tankan .tk-title { font-weight: bold; }
</style>
<defs>
<marker id="tk-head" viewBox="0 0 10 10" refX="9" refY="5" markerWidth="7" markerHeight="7" orient="auto-start-reverse"><path class="tk-head-fill" d="M0,0 L10,5 L0,10 z"/></marker>
<marker id="tk-open" viewBox="0 0 10 10" refX="9" refY="5" markerWidth="9" markerHeight="9" orient="auto-start-reverse"><path class="tk-head-line" d="M1,1 L9,5 L1,9"/></marker>
<marker id="tk-cross" viewBox="0 0 10 10" refX="5" refY="5" markerWidth="8" markerHeight="8" orient="auto"><path class="tk-head-line" d="M1,1 L9,9 M9,1 L1,9"/></marker>
</defs>
<line class="tk-lifeline" x1="130.5" y1="53.5" x2="130.5" y2="286.5"/>
<line class="tk-lifeline" x1="330.5" y1="53.5" x2="330.5" y2="286.5"/>
<line class="tk-msg" x1="330.5" y1="190.5" x2="130.5" y2="190.5"/>
<text class="tk-msg-text" x="230.5" y="180.5" text-anchor="middle">Hello John, how are you?</text>
<rect class="tk-note" x="140.5" y="73.5" width="89" height="35.5" rx="2"/>
<text class="tk-note-text" x="185" y="93" text-anchor="middle">Text in note</text>
<rect class="tk-note" x="50" y="119" width="70.5" height="35.5" rx="2"/>
<text class="tk-note-text" x="85" y="138.5" text-anchor="middle">Left note</text>
<rect class="tk-note" x="105.5" y="215.5" width="250" height="55" rx="2"/>
<text class="tk-note-text" x="230.5" y="234.5" text-anchor="middle">A typical interaction</text>
<text class="tk-note-text" x="230.5" y="254" text-anchor="middle">But now in two lines</text>
<g class="tk-actor">
<rect class="tk-actor-box" x="55.5" y="10" width="150" height="43.5" rx="3"/>
<text class="tk-actor-label" x="130.5" y="34" text-anchor="middle">John</text>
</g>
<g class="tk-actor">
<rect class="tk-actor-box" x="55.5" y="286.5" width="150" height="43.5" rx="3"/>
<text class="tk-actor-label" x="130.5" y="310.5" text-anchor="middle">John</text>
</g>
<g class="tk-actor">
<rect class="tk-actor-box" x="255.5" y="10" width="150" height="43.5" rx="3"/>
<text class="tk-actor-label" x="330.5" y="34" text-anchor="middle">Alice</text>
</g>
<g class="tk-actor">
<rect class="tk-actor-box" x="255.5" y="286.5" width="150" height="43.5" rx="3"/>
<text class="tk-actor-label" x="330.5" y="310.5" text-anchor="middle">Alice</text>
</g>
</svg>
