crates/tankan/tests/snapshots/corpus_test__svg_13-autonumber.snap
---
source: crates/tankan/tests/corpus_test.rs
expression: svg
---
<svg class="tankan tankan-sequence" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 779 472" width="779" height="472" role="img" aria-label="Sequence diagram" font-family="sans-serif" font-size="14">
<style>
.tankan text { fill: #1f2328; }
.tankan .tk-actor rect { fill: #ffffff; stroke: #d1d9e0; }
.tankan .tk-actor-figure { stroke: #1f2328; fill: none; }
.tankan .tk-lifeline { stroke: #59636e; }
.tankan .tk-msg { stroke: #1f2328; fill: none; }
.tankan .tk-head-fill { fill: #1f2328; }
.tankan .tk-head-line { stroke: #1f2328; fill: none; stroke-width: 1.5; }
.tankan .tk-activation { fill: #f6f8fa; stroke: #d1d9e0; }
.tankan .tk-note { fill: #f6f8fa; stroke: #d1d9e0; }
.tankan .tk-frame { stroke: #d1d9e0; fill: none; }
.tankan .tk-frame-sep { stroke: #d1d9e0; stroke-dasharray: 4,4; }
.tankan .tk-frame-labelbox { fill: #f6f8fa; stroke: #d1d9e0; }
.tankan .tk-frame-kind { font-weight: bold; }
.tankan .tk-frame-label { fill: #59636e; }
.tankan .tk-groupbox { stroke: #d1d9e0; fill: none; }
.tankan .tk-groupbox-bg { stroke: none; }
.tankan .tk-seqnum circle { fill: #9a6700; }
.tankan .tk-seqnum text { fill: #ffffff; font-size: 11px; }
.tankan .tk-title { font-weight: bold; }
</style>
<defs>
<marker id="tk-head" viewBox="0 0 10 10" refX="9" refY="5" markerWidth="7" markerHeight="7" orient="auto-start-reverse"><path class="tk-head-fill" d="M0,0 L10,5 L0,10 z"/></marker>
<marker id="tk-open" viewBox="0 0 10 10" refX="9" refY="5" markerWidth="9" markerHeight="9" orient="auto-start-reverse"><path class="tk-head-line" d="M1,1 L9,5 L1,9"/></marker>
<marker id="tk-cross" viewBox="0 0 10 10" refX="5" refY="5" markerWidth="8" markerHeight="8" orient="auto"><path class="tk-head-line" d="M1,1 L9,9 M9,1 L1,9"/></marker>
</defs>
<line class="tk-lifeline" x1="125" y1="53.5" x2="125" y2="418.5"/>
<line class="tk-lifeline" x1="327" y1="53.5" x2="327" y2="418.5"/>
<line class="tk-lifeline" x1="654" y1="53.5" x2="654" y2="418.5"/>
<rect class="tk-frame" x="307" y="124" width="40" height="81"/>
<polygon class="tk-frame-labelbox" points="307,124 357,124 357,138 351,144 307,144"/>
<text class="tk-frame-kind" x="329" y="138" text-anchor="middle">loop</text>
<text class="tk-frame-label" x="365" y="138" text-anchor="start">[HealthCheck]</text>
<line class="tk-msg" x1="125" y1="99" x2="327" y2="99" marker-end="url(#tk-head)"/>
<text class="tk-msg-text" x="226" y="89" text-anchor="middle">Hello John, how are you?</text>
<g class="tk-seqnum"><circle cx="137" cy="99" r="9"/><text x="137" y="102.5" text-anchor="middle">1</text></g>
<path class="tk-msg" d="M 327,156 C 383,148 383,184 327,176" marker-end="url(#tk-head)"/>
<text class="tk-msg-text" x="373" y="166" text-anchor="start">Fight against hypochondria</text>
<g class="tk-seqnum"><circle cx="339" cy="154" r="9"/><text x="339" y="157.5" text-anchor="middle">2</text></g>
<line class="tk-msg" x1="327" y1="286.5" x2="125" y2="286.5" stroke-dasharray="3,3" marker-end="url(#tk-head)"/>
<text class="tk-msg-text" x="226" y="276.5" text-anchor="middle">Great!</text>
<g class="tk-seqnum"><circle cx="315" cy="286.5" r="9"/><text x="315" y="290" text-anchor="middle">3</text></g>
<line class="tk-msg" x1="327" y1="337" x2="654" y2="337" marker-end="url(#tk-head)"/>
<text class="tk-msg-text" x="490.5" y="327" text-anchor="middle">How about you?</text>
<g class="tk-seqnum"><circle cx="339" cy="337" r="9"/><text x="339" y="340.5" text-anchor="middle">4</text></g>
<line class="tk-msg" x1="654" y1="387.5" x2="327" y2="387.5" stroke-dasharray="3,3" marker-end="url(#tk-head)"/>
<text class="tk-msg-text" x="490.5" y="377.5" text-anchor="middle">Jolly good!</text>
<g class="tk-seqnum"><circle cx="642" cy="387.5" r="9"/><text x="642" y="391" text-anchor="middle">5</text></g>
<rect class="tk-note" x="337" y="215" width="129" height="35.5" rx="2"/>
<text class="tk-note-text" x="401.5" y="234.5" text-anchor="middle">Rational thoughts!</text>
<g class="tk-actor">
<rect class="tk-actor-box" x="50" y="10" width="150" height="43.5" rx="3"/>
<text class="tk-actor-label" x="125" y="34" text-anchor="middle">Alice</text>
</g>
<g class="tk-actor">
<rect class="tk-actor-box" x="50" y="418.5" width="150" height="43.5" rx="3"/>
<text class="tk-actor-label" x="125" y="442.5" text-anchor="middle">Alice</text>
</g>
<g class="tk-actor">
<rect class="tk-actor-box" x="252" y="10" width="150" height="43.5" rx="3"/>
<text class="tk-actor-label" x="327" y="34" text-anchor="middle">John</text>
</g>
<g class="tk-actor">
<rect class="tk-actor-box" x="252" y="418.5" width="150" height="43.5" rx="3"/>
<text class="tk-actor-label" x="327" y="442.5" text-anchor="middle">John</text>
</g>
<g class="tk-actor">
<rect class="tk-actor-box" x="579" y="10" width="150" height="43.5" rx="3"/>
<text class="tk-actor-label" x="654" y="34" text-anchor="middle">Bob</text>
</g>
<g class="tk-actor">
<rect class="tk-actor-box" x="579" y="418.5" width="150" height="43.5" rx="3"/>
<text class="tk-actor-label" x="654" y="442.5" text-anchor="middle">Bob</text>
</g>
</svg>
