crates/tankan/tests/snapshots/corpus_test__svg_15-japanese.snap
---
source: crates/tankan/tests/corpus_test.rs
expression: svg
---
<svg class="tankan tankan-sequence" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 652 335.5" width="652" height="335.5" role="img" aria-label="Sequence diagram" font-family="sans-serif" font-size="14">
<style>
.tankan text { fill: #1f2328; }
.tankan .tk-actor rect { fill: #ffffff; stroke: #d1d9e0; }
.tankan .tk-actor-figure { stroke: #1f2328; fill: none; }
.tankan .tk-lifeline { stroke: #59636e; }
.tankan .tk-msg { stroke: #1f2328; fill: none; }
.tankan .tk-head-fill { fill: #1f2328; }
.tankan .tk-head-line { stroke: #1f2328; fill: none; stroke-width: 1.5; }
.tankan .tk-activation { fill: #f6f8fa; stroke: #d1d9e0; }
.tankan .tk-note { fill: #f6f8fa; stroke: #d1d9e0; }
.tankan .tk-frame { stroke: #d1d9e0; fill: none; }
.tankan .tk-frame-sep { stroke: #d1d9e0; stroke-dasharray: 4,4; }
.tankan .tk-frame-labelbox { fill: #f6f8fa; stroke: #d1d9e0; }
.tankan .tk-frame-kind { font-weight: bold; }
.tankan .tk-frame-label { fill: #59636e; }
.tankan .tk-groupbox { stroke: #d1d9e0; fill: none; }
.tankan .tk-groupbox-bg { stroke: none; }
.tankan .tk-seqnum circle { fill: #9a6700; }
.tankan .tk-seqnum text { fill: #ffffff; font-size: 11px; }
.tankan .tk-title { font-weight: bold; }
</style>
<defs>
<marker id="tk-head" viewBox="0 0 10 10" refX="9" refY="5" markerWidth="7" markerHeight="7" orient="auto-start-reverse"><path class="tk-head-fill" d="M0,0 L10,5 L0,10 z"/></marker>
<marker id="tk-open" viewBox="0 0 10 10" refX="9" refY="5" markerWidth="9" markerHeight="9" orient="auto-start-reverse"><path class="tk-head-line" d="M1,1 L9,5 L1,9"/></marker>
<marker id="tk-cross" viewBox="0 0 10 10" refX="5" refY="5" markerWidth="8" markerHeight="8" orient="auto"><path class="tk-head-line" d="M1,1 L9,9 M9,1 L1,9"/></marker>
</defs>
<line class="tk-lifeline" x1="125" y1="53.5" x2="125" y2="282"/>
<line class="tk-lifeline" x1="325" y1="53.5" x2="325" y2="282"/>
<line class="tk-lifeline" x1="527" y1="53.5" x2="527" y2="282"/>
<line class="tk-msg" x1="125" y1="99" x2="325" y2="99" marker-end="url(#tk-head)"/>
<text class="tk-msg-text" x="225" y="89" text-anchor="middle">yuzu build --watch</text>
<line class="tk-msg" x1="325" y1="150" x2="527" y2="150" stroke-dasharray="3,3" marker-end="url(#tk-head)"/>
<text class="tk-msg-text" x="426" y="140" text-anchor="middle">静的 HTML（自動リロード）</text>
<line class="tk-msg" x1="125" y1="200.5" x2="325" y2="200.5" marker-end="url(#tk-head)"/>
<text class="tk-msg-text" x="225" y="190.5" text-anchor="middle">Markdown を編集</text>
<line class="tk-msg" x1="325" y1="251" x2="527" y2="251" stroke-dasharray="3,3" marker-end="url(#tk-head)"/>
<text class="tk-msg-text" x="426" y="241" text-anchor="middle">再ビルド → リロード</text>
<g class="tk-actor">
<rect class="tk-actor-box" x="50" y="10" width="150" height="43.5" rx="3"/>
<text class="tk-actor-label" x="125" y="34" text-anchor="middle">執筆者</text>
</g>
<g class="tk-actor">
<rect class="tk-actor-box" x="50" y="282" width="150" height="43.5" rx="3"/>
<text class="tk-actor-label" x="125" y="306" text-anchor="middle">執筆者</text>
</g>
<g class="tk-actor">
<rect class="tk-actor-box" x="250" y="10" width="150" height="43.5" rx="3"/>
<text class="tk-actor-label" x="325" y="34" text-anchor="middle">yuzu</text>
</g>
<g class="tk-actor">
<rect class="tk-actor-box" x="250" y="282" width="150" height="43.5" rx="3"/>
<text class="tk-actor-label" x="325" y="306" text-anchor="middle">yuzu</text>
</g>
<g class="tk-actor">
<rect class="tk-actor-box" x="452" y="10" width="150" height="43.5" rx="3"/>
<text class="tk-actor-label" x="527" y="34" text-anchor="middle">ブラウザ</text>
</g>
<g class="tk-actor">
<rect class="tk-actor-box" x="452" y="282" width="150" height="43.5" rx="3"/>
<text class="tk-actor-label" x="527" y="306" text-anchor="middle">ブラウザ</text>
</g>
</svg>
