crates/tankan/tests/snapshots/corpus_test__svg_class_08-japanese.snap
---
source: crates/tankan/tests/corpus_test.rs
expression: svg
---
<svg class="tankan tankan-class" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 343.5 377" width="343.5" height="377" role="img" aria-label="Class diagram" font-family="sans-serif" font-size="14">
<style>
.tankan text { fill: #1f2328; }
.tankan .tk-class { fill: #ffffff; stroke: #d1d9e0; }
.tankan .tk-class-title { fill: #f6f8fa; stroke: #d1d9e0; }
.tankan .tk-class-name { font-weight: bold; }
.tankan .tk-class-anno { fill: #59636e; font-style: italic; }
.tankan .tk-class-line { stroke: #d1d9e0; }
.tankan .tk-rel { stroke: #1f2328; fill: none; }
.tankan .tk-marker { fill: #ffffff; stroke: #1f2328; stroke-width: 1.2; }
.tankan .tk-marker-fill { fill: #1f2328; stroke: #1f2328; stroke-width: 1.2; }
.tankan .tk-marker-open { fill: none; stroke: #1f2328; stroke-width: 1.2; }
.tankan .tk-rel-label rect { fill: #ffffff; stroke: none; }
.tankan .tk-card { fill: #59636e; }
</style>
<defs>
<marker id="tk-cls-tri" viewBox="0 0 20 16" refX="18" refY="8" markerWidth="20" markerHeight="16" orient="auto-start-reverse"><path class="tk-marker" d="M2,2 L18,8 L2,14 Z"/></marker>
<marker id="tk-cls-diamond" viewBox="0 0 24 12" refX="22" refY="6" markerWidth="24" markerHeight="12" orient="auto-start-reverse"><path class="tk-marker-fill" d="M22,6 L12,2 L2,6 L12,10 Z"/></marker>
<marker id="tk-cls-odiamond" viewBox="0 0 24 12" refX="22" refY="6" markerWidth="24" markerHeight="12" orient="auto-start-reverse"><path class="tk-marker" d="M22,6 L12,2 L2,6 L12,10 Z"/></marker>
<marker id="tk-cls-arrow" viewBox="0 0 16 12" refX="14" refY="6" markerWidth="14" markerHeight="12" orient="auto-start-reverse"><path class="tk-marker-open" d="M2,2 L14,6 L2,10"/></marker>
</defs>
<path class="tk-rel" d="M 113,134.5 L 157.5,193.5 Q 161,198 164.5,203 L 210.5,262" marker-start="url(#tk-cls-tri)"/>
<g class="tk-rel-label">
<rect class="" x="143" y="186.5" width="36" height="23.5"/>
<text class="" x="161" y="200.5" text-anchor="middle">継承</text>
</g>
<path class="tk-rel" d="M 247,124.5 L 247,192 Q 247,198 247,204 L 247,262" stroke-dasharray="4,4" marker-start="url(#tk-cls-tri)"/>
<g class="tk-rel-label">
<rect class="" x="229" y="186.5" width="36" height="23.5"/>
<text class="" x="247" y="200.5" text-anchor="middle">実現</text>
</g>
<rect class="tk-class" x="20" y="20" width="100.5" height="114.5"/>
<rect class="tk-class-title" x="20" y="20" width="100.5" height="31.5"/>
<text class="tk-class-name" x="70.5" y="38" text-anchor="middle">動物</text>
<line class="tk-class-line" x1="20" y1="103" x2="120.5" y2="103"/>
<text class="tk-class-member" x="32" y="69.5" text-anchor="start">+String 名前</text>
<text class="tk-class-member" x="32" y="89" text-anchor="start">+int 年齢</text>
<text class="tk-class-member" x="32" y="120.5" text-anchor="start">+鳴く() void</text>
<rect class="tk-class" x="190.5" y="262" width="113" height="95"/>
<rect class="tk-class-title" x="190.5" y="262" width="113" height="31.5"/>
<text class="tk-class-name" x="247" y="280" text-anchor="middle">犬</text>
<line class="tk-class-line" x1="190.5" y1="325" x2="303.5" y2="325"/>
<text class="tk-class-member" x="202.5" y="311.5" text-anchor="start">+String 犬種</text>
<text class="tk-class-member" x="202.5" y="343" text-anchor="start">+吠える() void</text>
<rect class="tk-class" x="170.5" y="30" width="153" height="95"/>
<rect class="tk-class-title" x="170.5" y="30" width="153" height="51"/>
<text class="tk-class-anno" x="247" y="47.5" text-anchor="middle">«インターフェース»</text>
<text class="tk-class-name" x="247" y="67.5" text-anchor="middle">鳥類</text>
<line class="tk-class-line" x1="170.5" y1="93" x2="323.5" y2="93"/>
<text class="tk-class-member" x="182.5" y="111" text-anchor="start">+飛ぶ() void</text>
</svg>
